# OS_Simulators

./: README.md
Code/CW_AWS-4a9a976a48916d942879662e6170f9b270ba7aed/coursework/targetver/: coursework.cpp  coursework.rc  framework.h  resource.h
course-work-5-eb2d7285b814f29ebb352a6f96dfd6070a8e5d6e/: .clang-format  .gitignore  CMakeLists.txt
course-work-5-eb2d7285b814f29ebb352a6f96dfd6070a8e5d6e/course_work/: CMakeLists.txt
course-work-5-eb2d7285b814f29ebb352a6f96dfd6070a8e5d6e/course_work/c_code/: CMakeLists.txt  linker_script.ld
course-work-5-eb2d7285b814f29ebb352a6f96dfd6070a8e5d6e/course_work/c_code/src/: main.c
course-work-5-eb2d7285b814f29ebb352a6f96dfd6070a8e5d6e/course_work/trampoline/: CMakeLists.txt
course-work-5-eb2d7285b814f29ebb352a6f96dfd6070a8e5d6e/course_work/trampoline/src/: trampoline.asm
course-work-5-eb2d7285b814f29ebb352a6f96dfd6070a8e5d6e/course_work/uefi_application/: CMakeLists.txt  CourseWork.inf
course-work-5-eb2d7285b814f29ebb352a6f96dfd6070a8e5d6e/course_work/uefi_application/src/: c_code.inl  data_types.h  main.c  print_functions.c  print_functions.h  trampoline.inl  utils.c  utils.h
course-work-5-eb2d7285b814f29ebb352a6f96dfd6070a8e5d6e/run-ovmf/: target_ovmf.txt
course-work-5-eb2d7285b814f29ebb352a6f96dfd6070a8e5d6e/scripts/: build.sh  build_c_code.sh  copy_binary.sh  init_edk_tools.sh  install_dependencies.sh  rebuild_ovmf.sh  reset_gcc.sh  run.sh  setup_gcc.sh  target_app.txt  update_assembly.sh  update_ovmf.sh
sampleOutputx/__MACOSX/: ._sampleOutput
sampleOutputx/__MACOSX/sampleOutput/: ._simulator1.txt  ._simulator7.txt
